# fcsp-presale-extractor

./: .gitignore  .pre-commit-config.yaml  README.md  check_parser.py  fcsp_presale_extractor.py  pyproject.toml  test_extractor.py
.claude/: parser-validation-workflow.md
.github/workflows/: update-calendar.yml
test_data/: rss_test.xml
